hydroflow/tests/compile-fail/surface_source_iter_badtype.stderr
error[E0277]: `{integer}` is not an iterator
 --> tests/compile-fail/surface_source_iter_badtype.rs:5:21
  |
5 |         source_iter(5) -> for_each(std::mem::drop);
  |         ------------^-
  |         |           |
  |         |           `{integer}` is not an iterator
  |         required by a bound introduced by this call
  |
  = help: the trait `Iterator` is not implemented for `{integer}`
  = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`
  = note: required for `{integer}` to implement `IntoIterator`
note: required by a bound in `check_iter`
 --> tests/compile-fail/surface_source_iter_badtype.rs:5:9
  |
5 |         source_iter(5) -> for_each(std::mem::drop);
  |         ^^^^^^^^^^^^^^ required by this bound in `check_iter`
